--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bottleneck": "^2.19.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "mongodb": "^6.10.0",
-    "twitter-api-v2": "^1.18.1"
+    "openai": "^4.71.1",
+    "sharp": "^0.33.5",
+    "twitter-api-v2": "^1.18.1",
+    "winston": "^3.17.0"
   }
 }
