--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "openai": "^4.71.1",
     "sharp": "^0.33.5",
     "twitter-api-v2": "^1.18.1",
+    "uuid": "^11.0.3",
     "winston": "^3.17.0"
   }
 }
