--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "description": "",
   "dependencies": {
     "bottleneck": "^2.19.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
-    "mongodb": "^6.10.0",
+    "mongodb": "^6.15.0",
+    "node-cron": "^3.0.3",
     "openai": "^4.71.1",
+    "p-limit": "^6.2.0",
     "sharp": "^0.33.5",
     "twitter-api-v2": "^1.18.1",
     "uuid": "^11.0.3",
