.env.sample update

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,18 @@
-TWITTER_API_KEY=your_api_key
-TWITTER_API_SECRET=your_api_secret
-TWITTER_ACCESS_TOKEN=your_access_token
-TWITTER_ACCESS_SECRET=your_access_secret
+MONGODB_URI=""
+DB_NAME="bobX"
 
-MONGODB_URI=your_mongodb_uri
+TWITTER_USERNAME="@bobthesnek"
+TWITTER_USER_ID="1812208769880956928"
+TWITTER_APP_TOKEN=""
+TWITTER_APP_SECRET=""
+TWITTER_ACCESS_TOKEN=""
+TWITTER_ACCESS_SECRET=""
+
+OPENAI_API_URI="https://openrouter.ai/api/v1"
+OPENAI_API_KEY=""
+TEXT_MODEL="deepseek/deepseek-chat"
+VISION_MODEL="meta-llama/llama-3.2-90b-vision-instruct"
+
+DAILY_TWEET_LIMIT=100
+POST_INTERVAL_MINUTES=1
+REPLY_TO_UNFOLLOWED="true"
