--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,24 @@
 MONGODB_URI=""
-DB_NAME="bobX"
+DB_NAME=""
 
 TWITTER_USERNAME="@bobthesnek"
-TWITTER_USER_ID="1812208769880956928"
+TWITTER_USER_ID=""
 TWITTER_APP_TOKEN=""
 TWITTER_APP_SECRET=""
 TWITTER_ACCESS_TOKEN=""
 TWITTER_ACCESS_SECRET=""
 
-OPENAI_API_URI="https://openrouter.ai/api/v1"
-OPENAI_API_KEY=""
-TEXT_MODEL="deepseek/deepseek-chat"
+OPENROUTER_API_URL="https://openrouter.ai/api/v1"
+OPENROUTER_API_KEY=""
+TEXT_MODEL="openrouter/auto"
 VISION_MODEL="meta-llama/llama-3.2-90b-vision-instruct"
 
-DAILY_TWEET_LIMIT=100
+DAILY_TWEET_LIMIT=10
 POST_INTERVAL_MINUTES=1
 REPLY_TO_UNFOLLOWED="true"
+
+XCACHE_API_BASE_URL=""
+XCACHE_API_KEY=""
+
+FETCH_X_MENTIONS="true"
+FETCH_X_TIMELINE="false"
